# GB_Python_Async01

./: README.md  client.py  client_guest_base.db3  client_test1_base.db3  client_test2_base.db3  client_test3_base.db3  commands  config.py  launcher_linux.py  pyproject.toml  requirements.txt  server.py  server_base.db3  server_base2.db3  test.key
gb_mess_client/: dev_commands  pyproject.toml  requirements.txt  setup.cfg  setup_cx_freeze.py
gb_mess_client/test/: launcher_linux.py
gb_mess_server/: dev_commands  pyproject.toml  requirements.txt  setup.cfg  setup_cx_freeze.py
gb_python_async01/: client.py  config.py  server.py
gb_python_async01/client/: app.py  cli.py  config.py  controller.py  errors.py  transport.py
gb_python_async01/common/: JIM.py  descriptors.py  endpoints.py  errors.py  serializers.py
gb_python_async01/lesson_01/: task_lesson_01.py
gb_python_async01/lesson_02/: task_01.py
gb_python_async01/log/: config_client.py  config_server.py
gb_python_async01/server/: app.py  cli.py  config.py  errors.py  message_dispatcher.py
gb_python_async01/transport/: descriptors.py  endpoints.py  errors.py  metaclasses.py  protocol.py  security.py
gb_python_async01/unittest/: __init__.py  test_client.py  test_security.py  test_serializers.py  test_server.py  test_server_db.py  test_transport.py
gb_python_async01/utils/: errors.py  observer.py  security.py
lesson_02/: orders.json  task_02.py  task_03.py  task_03_result.yaml
lesson_09/: tasks_1_3.py
sphinx_documentation/source/: conf.py  gb_python_async01.rst  index.rst  server.rst
(+203 files in other folders)
