[tool.poetry]
name = "gb-python-async01"
version = "0.1.0"
description = ""
authors = ["Ivan St <ivanstgit>"]
readme = "README.md"
packages = [{include = "gb_python_async01"}]

[tool.poetry.dependencies]
python = "^3.9"
chardet = "^5.1.0"
pyyaml = "^6.0"
sqlalchemy = "^2.0.17"
pyqt5 = "^5.15.9"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
